--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -49,7 +49,6 @@ jetty.version=6.1.14
 jetty-util.version=6.1.14
 junit.version=4.5
 jdiff.version=1.0.9
-json.version=1.0
 
 kfs.version=0.3
 
@@ -70,3 +69,5 @@ slf4j-log4j12.version=1.4.3
 
 xmlenc.version=0.52
 xerces.version=1.4.4
+
+jackson.version=1.0.1
