MAPREDUCE-157. Refactor job history APIs and change the history format to JSON. Contributed by Jothi Padmanabhan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816052 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/capacity-scheduler/ivy.xml
+++ b/src/contrib/capacity-scheduler/ivy.xml
@@ -68,5 +68,13 @@
       name="avro"
       rev="1.0.0"
       conf="common->default"/>
+    <dependency org="org.codehaus.jackson"
+      name="jackson-mapper-asl"
+      rev="${jackson.version}"
+      conf="common->default"/>
+    <dependency org="org.codehaus.jackson"
+      name="jackson-core-asl"
+      rev="${jackson.version}"
+      conf="common->default"/>
   </dependencies>
 </ivy-module>
