MAPREDUCE-775. Add native and streaming support for Vertica as an input or output format taking advantage of parallel read and write properties of the DBMS. Contributed by Omer Trajman.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816735 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/build.xml
+++ b/src/contrib/build.xml
@@ -57,6 +57,7 @@
       <fileset dir="." includes="mrunit/build.xml"/> 
       <fileset dir="." includes="dynamic-scheduler/build.xml"/>
       <fileset dir="." includes="gridmix/build.xml"/>
+      <fileset dir="." includes="vertica/build.xml"/>
     </subant>
     <available file="${build.contrib.dir}/testsfailed" property="testsfailed"/>
     <fail if="testsfailed">Tests failed!</fail>
