--- a/ivy.xml
+++ b/ivy.xml
@@ -271,7 +271,7 @@
     </dependency>
     <dependency org="org.apache.hadoop"
       name="avro"
-      rev="1.0.0"
+      rev="${avro.version}"
       conf="common->default"/>
     <dependency org="org.codehaus.jackson"
       name="jackson-mapper-asl"
@@ -283,7 +283,7 @@
       conf="common->default"/>
     <dependency org="com.thoughtworks.paranamer"
       name="paranamer"
-      rev="1.5"
+      rev="${paranamer.version}"
       conf="common->default"/>
     </dependencies>
   
