--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -16,6 +16,8 @@
 #These are the versions of our dependencies (in alphabetical order)
 apacheant.version=1.7.0
 
+avro.version=1.1.0
+
 checkstyle.version=4.2
 
 commons-cli.version=1.2
@@ -41,6 +43,8 @@ hsqldb.version=1.8.0.10
 #ivy.version=2.0.0-beta2
 ivy.version=2.0.0-rc2
 
+jackson.version=1.0.1
+
 jasper.version=5.5.12
 jsp.version=2.1
 jsp-api.version=5.5.12
@@ -59,6 +63,8 @@ mina-core.version=2.0.0-M5
 
 oro.version=2.0.8
 
+paranamer.version=1.5
+
 rats-lib.version=0.6
 
 servlet.version=4.0.6
@@ -69,5 +75,3 @@ slf4j-log4j12.version=1.4.3
 
 xmlenc.version=0.52
 xerces.version=1.4.4
-
-jackson.version=1.0.1
