--- a/src/contrib/gridmix/ivy.xml
+++ b/src/contrib/gridmix/ivy.xml
@@ -87,7 +87,7 @@
       conf="common->default"/>
     <dependency org="org.apache.hadoop"
       name="avro"
-      rev="1.0.0"
+      rev="${avro.version}"
       conf="common->default"/>
     <dependency org="org.codehaus.jackson"
       name="jackson-mapper-asl"
@@ -96,6 +96,10 @@
     <dependency org="org.codehaus.jackson"
       name="jackson-core-asl"
       rev="${jackson.version}"
+      conf="common->default"/>
+    <dependency org="com.thoughtworks.paranamer"
+      name="paranamer"
+      rev="${paranamer.version}"
       conf="common->default"/>
   </dependencies>
 </ivy-module>
