--- a/build.xml
+++ b/build.xml
@@ -292,6 +292,15 @@
       </fileset>
     </copy>
 
+     <unzip src="${lib.dir}/hadoop-hdfs-${hadoop-hdfs.version}.jar"
+         dest="${build.dir}">
+       <patternset>
+         <include name="webapps/hdfs/**"/>
+         <include name="webapps/datanode/**"/>
+         <include name="webapps/secondary/**"/>
+       </patternset>
+     </unzip>
+
     <copy todir="${conf.dir}" verbose="true">
       <fileset dir="${conf.dir}" includes="**/*.template"/>
       <mapper type="glob" from="*.template" to="*"/>
