HADOOP-5107. Use Maven ant tasks to publish artifacts. (Giridharan Kesavan via omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@883594 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/contrib/block_forensics/ivy.xml
+++ b/src/contrib/block_forensics/ivy.xml
@@ -41,4 +41,8 @@
     <!--get the artifact from our module name-->
     <artifact conf="master"/>
   </publications>
+  <dependencies>
+    <dependency org="org.apache.hadoop" name="hadoop-core" 
+                rev="${hadoop-core.version}" conf="common->default"/>  
+  </dependencies>
 </ivy-module>
