--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -14,7 +14,8 @@
 #It drives ivy and the generation of a maven POM
 
 #These are the versions of our dependencies (in alphabetical order)
-apacheant.version=1.7.0
+apacheant.version=1.7.1
+ant-task.version=2.0.10
 
 avro.version=1.2.0
 
@@ -37,6 +38,9 @@ coreplugin.version=1.3.2
 ftplet-api.version=1.0.0
 ftpserver-core.version=1.0.0
 ftpserver-deprecated.version=1.0.0-M2
+
+hadoop-core.version=0.22.0-SNAPSHOT
+hadoop-hdfs.version=0.22.0-SNAPSHOT
 
 hsqldb.version=1.8.0.10
 
