--- a/build.xml
+++ b/build.xml
@@ -1259,7 +1259,8 @@
     <delete file="${hadoop-mapred-tools.pom}"/>
   </target>
 
-  <target name="veryclean" depends="clean" description="veryclean.  Delete ivy and ant maven task jar">
+  <target name="veryclean" depends="clean-cache,clean" 
+          description="veryclean.  Delete ivy and ant maven task jar">
     <delete file="${ant_task.jar}"/>
     <delete file="${ivy.jar}"/>
   </target>
