--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -17,6 +17,9 @@
 apacheant.version=1.7.1
 ant-task.version=2.0.10
 
+#Aspectj depedency for Fault injection
+aspectj.version=1.6.5
+
 avro.version=1.2.0
 
 checkstyle.version=4.2
@@ -81,3 +84,4 @@ slf4j-log4j12.version=1.4.3
 
 xmlenc.version=0.52
 xerces.version=1.4.4
+
