HADOOP-1126. Reverting due to -1.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@899844 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -322,7 +322,7 @@
     </taskdef>
     <protocol destdir="${build.src}">
       <fileset dir="${mapred.src.dir}">
-        <include name="**/*.avpr" />
+	<include name="**/*.avpr" />
       </fileset>
     </protocol>
   </target>
@@ -472,20 +472,7 @@
   <!-- Compile test code                                                  --> 
   <!-- ================================================================== -->
 
-  <target name="avro-generate-test">
-    <!-- generate avro record instances for tests -->
-    <taskdef name="schema" classname="org.apache.avro.specific.SchemaTask">
-      <classpath refid="classpath" />
-    </taskdef>
-    <schema destdir="${test.generated.dir}">
-      <fileset dir="${test.src.dir}">
-        <include name="**/*.avsc" />
-      </fileset>
-    </schema>
-  </target>
-
-  <target name="compile-mapred-test" depends="compile-mapred-classes, compile-examples,
-      ivy-retrieve-test, avro-generate-test">
+  <target name="compile-mapred-test" depends="compile-mapred-classes, compile-examples, ivy-retrieve-test">
 
     <mkdir dir="${test.mapred.build.classes}"/>
     <mkdir dir="${test.mapred.build.testjar}"/>
@@ -493,7 +480,7 @@
 
     <javac 
       encoding="${build.encoding}" 
-      srcdir="${test.src.dir}/mapred;${test.src.dir}/unit;${test.generated.dir}"
+      srcdir="${test.src.dir}/mapred;${test.src.dir}/unit"
       includes="org/apache/hadoop/**/*.java"
       destdir="${test.mapred.build.classes}"
       debug="${javac.debug}"
